bk_ida/gccida/c2/make_preds_opaque
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_preds_opaque/src/lcm.c:1433:6: error: use of undeclared identifier 'transp_0'; did you mean 'transp'?
v6 = transp_0[src->index]; 
     ^~~~~~~~
     transp
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_preds_opaque/src/lcm.c:889:17: note: 'transp' declared here
static sbitmap *transp;
                ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/make_preds_opaque/src/obj/lcm.o] Error 1
